fix dropdown in grids tree header overflow change

--- a/ComponentsHTML/Addons/_Templates/Tree/Tree.scss
+++ b/ComponentsHTML/Addons/_Templates/Tree/Tree.scss
@@ -29,7 +29,6 @@ $cellhorzpadding: 2px;
     overflow:auto;
 
     .tg_header {
-        overflow:hidden;
         white-space:nowrap;
         font-size:$fontsize;
         border:0;
